shaku_derive/tests/ui/no_interface_key.stderr
error: Unable to find interface. Please add a '#[shaku(interface = <your trait>)]'
  --> $DIR/no_interface_key.rs:10:8
   |
10 | struct ComponentImpl;
   |        ^^^^^^^^^^^^^

error: Unable to find interface. Please add a '#[shaku(interface = <your trait>)]'
  --> $DIR/no_interface_key.rs:15:8
   |
15 | struct ProviderImpl;
   |        ^^^^^^^^^^^^
